# Cloud-Computing

./: README.md  ioMapdev.yaml  ioMapprod.yaml  pc2.json  pyproject.toml  systemDefinition.yaml
Training-trial-site-follow-along 2/: pc2.json
Training-trial-site-follow-along 2/tasks/app/: runtime.py
app/: ens.py  runtime.py
app/user_code/: global_tags.py  models.py  routines.py
io1/: ens.py  runtime.py
io1/user_code/: cip_objects.py  models.py  sensor_io_logic.py  stepper_io_logic.py
